# slocate

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
benches/: embed.rs
doc/: slocate.1
docs/: hierarchical-memory.md
src/: config.rs  download.rs  embed.rs  error.rs  fastmath.rs  install.rs  leiden.rs  lib.rs  main.rs  mcp.rs  mcp_tools.rs  parse.rs  registry.rs  reindex.rs  search.rs  spsc.rs  store.rs  tools.rs  vdb.rs
src/backends/: claude.rs  gemini.rs  mod.rs
src/platform/: linux.rs  macos.rs  mod.rs
