[package]
name = "slocate"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Semantic locate — language-agnostic semantic code search for your terminal"
repository = "https://github.com/jppittman/slocate"
keywords = ["search", "semantic", "code", "embeddings", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled-full"] }
log = "0.4"
env_logger = "0.11"
ureq = { version = "3", features = ["rustls"] }
tree-sitter = "*"
tree-sitter-rust = "*"
tree-sitter-python = "*"
tree-sitter-go = "*"
tree-sitter-yaml = "*"
tree-sitter-starlark = "*"
tree-sitter-md = "*"
streaming-iterator = "0.1"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
candle-transformers = "0.9"
half = "2"

# Platform-specific BLAS/GPU backend for candle.
# Metal feature must be on candle-core AND candle-nn for GPU LayerNorm.
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "slocate"
path = "src/lib.rs"

[[bin]]
name = "slocate"
path = "src/main.rs"

[[bench]]
name = "embed"
harness = false

[profile.release]
opt-level = 3

[profile.bench]
debug = true

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = true
panic = "abort"
